--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,4 +22,6 @@
 
   .App {
     background-color: black;
+    background-image: url(https://images.unsplash.com/photo-1487088678257-3a541e6e3922?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80);
+    background-size: cover;
   }
