--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -1,9 +1,14 @@
 .cocktail {
-    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 6px 0px  rgba(0, 0, 0, 0.3);
     padding: 10px;
   }
 
 .recipe {
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    padding: 10px;
+}
+
+.movie {
     box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
     padding: 10px;
 }
